add d+ ids for s25; split theatrical releases to own season

--- a/episodes/season_25.yml
+++ b/episodes/season_25.yml
@@ -6,7 +6,7 @@ episodes:
   description: When Homer returns from a Nuclear Workers Convention and begins behaving
     strangely, Lisa worries that her father has been brainwashed and is now part of
     a terrorist plot to blow up the power plant.
-  disneyplus_id:
+  disneyplus_id: 52c632a3-fbc8-4d17-b46a-f5522ff30aaa
   simpsonsworld_id: 307191875741
   good: maybe
   characters:
@@ -16,7 +16,7 @@ episodes:
   description: In three terrifying Halloween tales, Bart, Lisa and Maggie receive
     a visit from The Fat in the Hat; when Bart is decapitated, his head is sewn onto
     Lisa's body; Homer plots to kill Moe at a circus freak show.
-  disneyplus_id:
+  disneyplus_id: 3ae51e62-c577-40cc-83fc-147cc4feccbf
   simpsonsworld_id: 310259779794
   good: maybe
   characters:
@@ -27,7 +27,7 @@ episodes:
   description: A Springfield funeral prompts Marge, Kent Brockman, Homer and Mr. Burns
     to reexamine a crucial decision in their lives one that has brought them the most
     regret.
-  disneyplus_id:
+  disneyplus_id: 166cebad-4ef0-404a-93ef-50166b7b847f
   simpsonsworld_id: 311688259548
   good: maybe
   characters:
@@ -37,7 +37,7 @@ episodes:
   description: After experiencing a midlife crisis, Homer reaches out to an old pen
     pal; when a cheating scandal rocks Springfield Elementary, Lisa establishes an
     honor code.
-  disneyplus_id:
+  disneyplus_id: 6b167486-d4b7-46c5-8246-2b24415d880a
   simpsonsworld_id: 304473155645
   good: maybe
   characters:
@@ -47,7 +47,7 @@ episodes:
   description: Homer gets trapped in an elevator with a pregnant woman and helps deliver
     her baby; Lisa helps underpaid cheerleaders organize so they can demand a salary
     increase from a greedy football team owner.
-  disneyplus_id:
+  disneyplus_id: 3ddd2387-3e2b-45d5-8003-075420c52ca9
   simpsonsworld_id: 311105091548
   good: maybe
   characters:
@@ -56,7 +56,7 @@ episodes:
   episode: 6
   description: Lisa is elated to befriend Isabel, a smart new student at school, only
     to realize that she and Isabel are on opposite sides of the political spectrum.
-  disneyplus_id:
+  disneyplus_id: 4b47c46b-cbda-4ecd-8715-94935ca69273
   simpsonsworld_id: 310523971648
   good: maybe
   characters:
@@ -66,7 +66,7 @@ episodes:
   description: Bart seeks revenge after Skinner prevents him from attending a school
     field trip aboard a submarine; Lisa suggests to the financially-strapped Krusty
     that he sell the foreign rights to his television show.
-  disneyplus_id:
+  disneyplus_id: febd486b-544e-4063-9f74-2925554c20a4
   simpsonsworld_id: 304476739664
   good: maybe
   characters:
@@ -76,7 +76,7 @@ episodes:
   description: As Christmas approaches, Marge transforms the house into a bed and
     breakfast after Springfield becomes the only town in America to receive snowfall;
     Lisa vows to give her loved ones modest gifts that come from the heart.
-  disneyplus_id:
+  disneyplus_id: 90d36b9f-c9da-4f5b-9c99-03f63a2742aa
   simpsonsworld_id: 307199043880
   good: maybe
   characters:
@@ -85,7 +85,7 @@ episodes:
   episode: 9
   description: Homer is put on trial after the FBI catches him illegally downloading
     movies from the Internet.
-  disneyplus_id:
+  disneyplus_id: 0c9550cd-8044-4efe-8eed-aece092047f6
   simpsonsworld_id: 310523459925
   good: maybe
   characters:
@@ -94,7 +94,7 @@ episodes:
   episode: 10
   description: The Comic Book Guy marries a Japanese woman, only to discover that
     the woman's father disapproves of the union.
-  disneyplus_id:
+  disneyplus_id: c26f25f7-d8d3-4ea0-a62a-bcaaa8688b3f
   simpsonsworld_id: 310541379637
   good: maybe
   characters:
@@ -103,26 +103,26 @@ episodes:
   episode: 11
   description: Homer uses augmented reality glasses to spy on Marge; Nelson demands
     a Valentine's Day card from Bart.
-  disneyplus_id:
+  disneyplus_id: 0c4e2f05-97c8-46fd-9699-6f44940717b7
   simpsonsworld_id: 307204163997
-  good: maybe
-  characters:
-- title: Diggs
-  season: 25
-  episode: 12
-  description: Bart befriends a fellow student and falconry expert, only to discover
-    that the boy suffers from mental illness.
-  disneyplus_id:
-  simpsonsworld_id: 310529091639
   good: maybe
   characters:
 - title: The Man Who Grew Too Much
   season: 25
-  episode: 13
+  episode: 12
   description: Sideshow Bob genetically alters his DNA, giving him superhuman strength;
     Marge volunteers as a teen abstinence counselor.
-  disneyplus_id:
+  disneyplus_id: 3afb3c6d-f176-4867-a1d1-c59758d9352b
   simpsonsworld_id: 307207235909
+  good: maybe
+  characters:
+- title: Diggs
+  season: 25
+  episode: 13
+  description: Bart befriends a fellow student and falconry expert, only to discover
+    that the boy suffers from mental illness.
+  disneyplus_id: 9afafaa3-fa10-489b-9b30-8e95371eb8ac
+  simpsonsworld_id: 310529091639
   good: maybe
   characters:
 - title: The Winter of His Content
@@ -131,7 +131,7 @@ episodes:
   description: When the Simpsons allow members of the retirement community to move
     in with them, Marge worries that Homer is picking up their habits and is turning
     into an old man; a gang of bullies accepts Bart as one of their own.
-  disneyplus_id:
+  disneyplus_id: bb32c897-8d50-495c-bce2-a9e91c4cc25b
   simpsonsworld_id: 307209283970
   good: maybe
   characters:
@@ -141,7 +141,7 @@ episodes:
   description: Homer convinces Marge to sell a painting that was purchased from Milhouse's
     parents at a yard sale, a painting that turns out to be worth a great deal of
     money.
-  disneyplus_id:
+  disneyplus_id: d589791f-8d39-40bc-a438-ef791f0fe4a8
   simpsonsworld_id: 311117891947
   good: maybe
   characters:
@@ -150,7 +150,7 @@ episodes:
   episode: 16
   description: After Lisa delivers a school report on why her father is her hero,
     Homer is tapped to referee World Cup soccer in Brazil.
-  disneyplus_id:
+  disneyplus_id: 7c3c7706-d070-4262-b4d6-21ce7e22899b
   simpsonsworld_id: 304489539783
   good: maybe
   characters:
@@ -159,7 +159,7 @@ episodes:
   episode: 17
   description: Lisa falls for a competitive eater who subconsciously reminds her of
     Homer; after Bart hides Jailbird from the police, he begins receiving stolen gifts.
-  disneyplus_id:
+  disneyplus_id: 6d255409-bf57-40b6-bbc1-307bebde5538
   simpsonsworld_id: 304500803520
   good: maybe
   characters:
@@ -169,7 +169,7 @@ episodes:
   description: Thirty years in the future, Bart tries to reestablish his relationship
     with his estranged wife, Jenda; Lisa thinks Milhouse is far more interesting after
     he's bitten by a zombie.
-  disneyplus_id:
+  disneyplus_id: 9089df85-7fd5-4fad-9e1b-5f4e8c2a7822
   simpsonsworld_id: 310257731892
   good: maybe
   characters:
@@ -179,7 +179,7 @@ episodes:
   description: Bart uses voodoo in an attempt to get rid of an art teacher, but when
     the teacher ends up getting pregnant, word spreads that Bart can help couples
     conceive.
-  disneyplus_id:
+  disneyplus_id: 1042e57d-5c33-44a5-a3bf-03ed298ea748
   simpsonsworld_id: 307214403888
   good: maybe
   characters:
@@ -188,7 +188,7 @@ episodes:
   episode: 20
   description: After Homer bonds with Lisa, Homer's imagination creates a world in
     which everything is made of Lego toys.
-  disneyplus_id:
+  disneyplus_id: 44ece42c-b05f-4368-91c4-ad72a5d23f61
   simpsonsworld_id: 311243331763
   good: maybe
   characters:
@@ -198,7 +198,7 @@ episodes:
   description: As Mother's Day approaches, after Homer and Marge's attempt to befriend
     other couples fails miserably, Lisa discovers a shocking secret about her new
     best friend.
-  disneyplus_id:
+  disneyplus_id: c4b37972-da8c-4268-b348-668474719dc3
   simpsonsworld_id: 304502851923
   good: maybe
   characters:
@@ -208,17 +208,7 @@ episodes:
   description: Bart is overcome with guilt after an act of cowardice leads to his
     winning a school race; Homer vows to hold his own Fourth of July fireworks display
     after Springfield's holiday celebration is canceled.
-  disneyplus_id:
+  disneyplus_id: ad75b189-ba84-41a8-af62-098025711897
   simpsonsworld_id: 307219523604
-  good: maybe
-  characters:
-- title: The Longest Daycare
-  season: 25
-  episode: 25
-  description: 'A theatrical short that premiered July 13, 2012, attached to the theatrical
-    release of Ice Age: Continental Drift.  It was nominated for an Academy Award
-    for Best Animated Short.'
-  disneyplus_id:
-  simpsonsworld_id: 588949571786
   good: maybe
   characters:
