add d+ ids for s26

--- a/episodes/season_26.yml
+++ b/episodes/season_26.yml
@@ -4,7 +4,7 @@ episodes:
   season: 26
   episode: 1
   description: 'The unthinkable happens: a Springfield resident dies.'
-  disneyplus_id:
+  disneyplus_id: 254b91ea-02ed-4b16-aa4e-03b594b89288
   simpsonsworld_id: 334920771636
   good: false
   characters:
@@ -13,7 +13,7 @@ episodes:
   season: 26
   episode: 2
   description: Homer and Bart set sail on the relation ship.
-  disneyplus_id:
+  disneyplus_id: 6a793d21-929a-410a-8615-3f4444970e19
   simpsonsworld_id: 346737219924
   good: false
   characters:
@@ -23,7 +23,7 @@ episodes:
   season: 26
   episode: 3
   description: Marge opens a sandwich shop.
-  disneyplus_id:
+  disneyplus_id: c8a58eb9-dbab-471a-86b3-a04bc34c2cff
   simpsonsworld_id: 340536899599
   good: false
   characters:
@@ -33,7 +33,7 @@ episodes:
   episode: 4
   description: Don't miss the all-new, spooktacular Halloween special, "Treehouse
     of Horror XXV."
-  disneyplus_id:
+  disneyplus_id: 54d99d91-e952-4ff5-baf8-9eef1a054885
   simpsonsworld_id: 344255555880
   good: false
   characters:
@@ -43,7 +43,7 @@ episodes:
   episode: 5
   description: An all-new episode featuring guest voice Jane Fonda, whose character
     falls for Mr. Burns.
-  disneyplus_id:
+  disneyplus_id: 0d02c072-ec15-4e51-b0eb-b0a8c683abd7
   simpsonsworld_id: 351437379941
   good: false
   characters:
@@ -53,7 +53,7 @@ episodes:
   season: 26
   episode: 6
   description: The Simpsons travel to the 31st century.
-  disneyplus_id:
+  disneyplus_id: 4374e696-9cb9-4e95-b906-e623ad31593a
   simpsonsworld_id: 355593283530
   good: false
   characters:
@@ -63,7 +63,7 @@ episodes:
   episode: 7
   description: Bart faces a tough test at school when he gets a new teacher, Mr. Lassen,
     who vows to crush his spirit.
-  disneyplus_id:
+  disneyplus_id: 34716532-5c16-4b0a-97fd-d71a2807f87a
   simpsonsworld_id: 359228483622
   good: false
   characters:
@@ -72,7 +72,7 @@ episodes:
   season: 26
   episode: 8
   description: Homer forms a cover band with some of the other dads in town.
-  disneyplus_id:
+  disneyplus_id: a1ed36d5-3086-49b8-b83e-2d20e72fa12b
   simpsonsworld_id: 362239555757
   good: false
   characters:
@@ -82,7 +82,7 @@ episodes:
   season: 26
   episode: 9
   description: Marge doesn't approve of Homer's Christmas spirits.
-  disneyplus_id:
+  disneyplus_id: 16914d01-b98b-4cf2-8904-36bd8f651e8f
   simpsonsworld_id: 368212547872
   good: maybe
   characters:
@@ -90,7 +90,7 @@ episodes:
   season: 26
   episode: 10
   description: An amusement park ride lands the Simpsons in outer space..
-  disneyplus_id:
+  disneyplus_id: ea171ef8-0dab-48f9-bec1-491775080bc4
   simpsonsworld_id: 379818563729
   good: maybe
   characters:
@@ -98,7 +98,7 @@ episodes:
   season: 26
   episode: 11
   description: Bart and Homer become BFF's.
-  disneyplus_id:
+  disneyplus_id: b30df722-986c-46ba-8e51-be92095b6e17
   simpsonsworld_id: 383002179865
   good: maybe
   characters:
@@ -106,7 +106,7 @@ episodes:
   season: 26
   episode: 12
   description: Homer becomes muse to Elon Musk.
-  disneyplus_id:
+  disneyplus_id: 2ee937da-4304-4ca5-868d-472e189d942d
   simpsonsworld_id: 388773443652
   good: maybe
   characters:
@@ -114,7 +114,7 @@ episodes:
   season: 26
   episode: 13
   description: Springfield gets a new town anthem.
-  disneyplus_id:
+  disneyplus_id: 645c035f-4f8f-4422-884e-333889eae9f4
   simpsonsworld_id: 395694659511
   good: maybe
   characters:
@@ -122,7 +122,7 @@ episodes:
   season: 26
   episode: 14
   description: Marge trades in her mom-chauffeur hat for a real one.
-  disneyplus_id:
+  disneyplus_id: ff549ddd-2534-4769-9c8e-940e46363649
   simpsonsworld_id: 399385667625
   good: maybe
   characters:
@@ -130,7 +130,7 @@ episodes:
   season: 26
   episode: 15
   description: Moe plots revenge over Nigerian e-mail scam.
-  disneyplus_id:
+  disneyplus_id: 77a22172-c5a9-4c80-b5ff-3d8fe21ecc3b
   simpsonsworld_id: 406163011894
   good: maybe
   characters:
@@ -138,7 +138,7 @@ episodes:
   season: 26
   episode: 16
   description: The Springfield congregation turns to gambling to repair the church.
-  disneyplus_id:
+  disneyplus_id: 7571103b-40e7-4456-80b6-4d1856bc73b0
   simpsonsworld_id: 410018371522
   good: maybe
   characters:
@@ -147,7 +147,7 @@ episodes:
   episode: 17
   description: When Duffman undergoes hip replacement surgery and retires, the company
     sets up a reality show competition to find his replacement.
-  disneyplus_id:
+  disneyplus_id: 8a3b1f5a-338d-4a7c-afcf-e3bb3933d0bb
   simpsonsworld_id: 420981315819
   good: maybe
   characters:
@@ -156,7 +156,7 @@ episodes:
   episode: 18
   description: Bart lies about being involved in a bulldozer crash, so Marge decides
     to follow him everywhere until he confesses.
-  disneyplus_id:
+  disneyplus_id: 7570ff99-2fd0-47a3-b275-404c5b96cc10
   simpsonsworld_id: 430426691868
   good: maybe
   characters:
@@ -166,7 +166,7 @@ episodes:
   description: When Homer gets an old film roll developed, the family takes a trip
     down memory lane to see the origins of how Bart and Lisa first started fighting
     with each other.
-  disneyplus_id:
+  disneyplus_id: 240cf703-b203-40ce-83b3-150fa2bc7b06
   simpsonsworld_id: 434682947703
   good: maybe
   characters:
@@ -175,7 +175,7 @@ episodes:
   episode: 20
   description: The Simpsons learn about Grampa's days in the Air Force, and Bart takes
     up smoking to impress Milhouse's Dutch cousin.
-  disneyplus_id:
+  disneyplus_id: 6398510e-4e51-4a48-a538-5781de70918b
   simpsonsworld_id: 438408259807
   good: false
   characters:
@@ -186,7 +186,7 @@ episodes:
   episode: 21
   description: After Bart gets bullied at the school dance, Marge convinces the town
     to pass anti-bullying legislation.
-  disneyplus_id:
+  disneyplus_id: 677ab214-4cde-4a05-8767-369f7a59be8c
   simpsonsworld_id: 442879555692
   good: maybe
   characters:
@@ -195,7 +195,7 @@ episodes:
   episode: 22
   description: When a modernized Springfield Elementary has a technical meltdown,
     Lisa transforms it into a Waldorf school.
-  disneyplus_id:
+  disneyplus_id: ee46a17f-b96f-4db1-b8bf-0e25d09f9a59
   simpsonsworld_id: 446649411760
   good: maybe
   characters:
