--- a/episodes/season_26.yml
+++ b/episodes/season_26.yml
@@ -111,7 +111,7 @@ episodes:
   description: An amusement park ride lands the Simpsons in outer space..
   disneyplus_id: ea171ef8-0dab-48f9-bec1-491775080bc4
   simpsonsworld_id: 379818563729
-  good: maybe
+  good: false
   guest_stars:
 - title: Bart's New Friend
   season: 26
@@ -238,7 +238,7 @@ episodes:
     to pass anti-bullying legislation.
   disneyplus_id: 677ab214-4cde-4a05-8767-369f7a59be8c
   simpsonsworld_id: 442879555692
-  good: maybe
+  good: false
   guest_stars:
 - title: Mathlete's Feat
   season: 26
@@ -250,5 +250,5 @@ episodes:
     Lisa transforms it into a Waldorf school.
   disneyplus_id: ee46a17f-b96f-4db1-b8bf-0e25d09f9a59
   simpsonsworld_id: 446649411760
-  good: maybe
+  good: false
   guest_stars:
